--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h1>Our Menu</h1>
-        <section id="section1"; class="col-lg-4 col-md-6 col-s-12">
+        <div>
+            <section id="section1"; class="col-lg-4 col-md-6 col-s-12">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
             sed diam nonumy eirmod tempor invidunt ut labore et dolore 
             magna aliquyam erat, sed diam voluptua. At vero eos et accusam 
@@ -17,8 +18,8 @@
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
             voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
             Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </section>
-        <section id="section2"; class="col-lg-4 col-md-6 col-s-12">
+            </section>
+            <section id="section2"; class="col-lg-4 col-md-6 col-s-12">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
             sed diam nonumy eirmod tempor invidunt ut labore et dolore 
             magna aliquyam erat, sed diam voluptua. At vero eos et accusam 
@@ -28,8 +29,8 @@
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
             voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
             Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </section>
-        <section id="section3"; class="col-lg-4 col-md-12 col-s-12">
+            </section>
+            <section id="section3"; class="col-lg-4 col-md-12 col-s-12">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
             sed diam nonumy eirmod tempor invidunt ut labore et dolore 
             magna aliquyam erat, sed diam voluptua. At vero eos et accusam 
@@ -39,6 +40,7 @@
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
             voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
             Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </section>
+            </section>
+        </div>
     </body>
 </html>
