minor improvements to Module 2 Assignment

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -18,6 +18,9 @@
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
             voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
             Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                <section class="title_region">
+                    Chicken
+                </section>
             </section>
             <section id="section2"; class="col-lg-4 col-md-6 col-s-12">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
