--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Positioning Elements</title>
+        <title>Restaurant Menu</title>
         <link rel="stylesheet" href="./css/stylesheet.css">
     </head>
     <body>
